# minimal-cpp-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: README.md
src/: main.cpp
